<resources>
    //sign in page
    <string name="app_name">Love wedding car</string>
    <string name="signuptxt1">Welcome Back</string>
    <string name="signuptxt2">Login to continue</string>
    <string name="enter_mail">     E-mail</string>
    <string name="enter_pwd">     Password</string>
    <string name="remember_btn">Remember me</string>
    <string name="forgot_btn">Forgot Password</string>
    <string name="signin_btn">Sign In</string>
    <string name="signintoup_btn">Sign Up</string>
    <string name="donthave_btn">Dont have an account ?</string>


    //onboard screen 1
    <string name="upbtn">SIGN UP</string>
    <string name="inbtn">SIGN IN</string>
</resources>