<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboardbackground"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/loginimg"
        android:layout_width="466dp"
        android:layout_height="204dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/login_EmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintxt2"
        app:srcCompat="@drawable/logo_removebg_preview" />

    <TextView
        android:id="@+id/logintxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signuptxt1"
        android:textColor="@color/Text"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signuptxt2"
        android:textColor="@color/Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintxt1" />

    <EditText
        android:id="@+id/login_EmailAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:hint="@string/enter_mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginimg" />

    <EditText
        android:id="@+id/login_Password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:hint="@string/enter_pwd"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_EmailAddress" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/remember_btn"
        android:textColor="@color/Text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Password" />

    <TextView
        android:id="@+id/forgottxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_btn"
        android:textColor="@color/Text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <TextView
        android:id="@+id/donthvacctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/donthave_btn"
        android:textColor="@color/Text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signintoup_btn"
        android:textColor="#1558DD"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/donthvacctxt"
        app:layout_constraintTop_toTopOf="@+id/donthvacctxt" />

    <Button
        android:id="@+id/signinhome"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="93dp"
        android:background="@drawable/roundedcorner"
        android:fontFamily="@font/poppins"
        android:text="@string/signin_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donthvacctxt" />
</androidx.constraintlayout.widget.ConstraintLayout>